edit index and navbar layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,10 +65,12 @@
             <div class="max-w-5xl px-6 mx-auto text-center">
                 <h2 class="text-2xl font-semibold text-white">More functions coming </h2>
 
-                <p class="text-gray-400 mt-4">SOH<br>
+                <p class="text-gray-400 mt-4">
+                    Product Specs<br>
+                    SOH<br>
                 	Product Image</br>
-                	Invocing<br>
-                	Export csv/exl/json file
+                	Invoce Generator<br>
+                	Export csv file
                 	</p>
 
             </div>
