edit pagination view

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -152,6 +152,27 @@
             <!-- More items... -->
           </tbody>
         </table>
+
+
+        <div class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
+          <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
+            <div>
+              <p class="text-sm text-gray-700">
+                Showing
+                <span class="font-medium">1</span>
+                to
+                <span class="font-medium">15</span>
+                of
+                <span class="font-medium"> <%= @products.total_count %> </span>
+                results
+              </p>
+            </div>
+
+            <div>
+              <%= paginate @products %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
