--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -240,7 +240,7 @@
               <fieldset>
                 <div>
                   <legend class="text-base font-medium text-gray-900">Activity</legend>
-                  <p class="text-sm text-gray-500">These are delivered via SMS to your mobile phone.</p>
+                  <p class="text-sm text-gray-500">Disabled if inactive.</p>
                 </div>
                 <div class="mt-4 space-y-4">
                   <div class="flex items-start">
@@ -249,6 +249,7 @@
                     </div>
                     <div class="ml-3 text-sm">
                       <%= form.label :active, "Active", class: "font-medium text-gray-700" %>
+                      <!--p class="text-gray-500">Disabled if inactive.</p-->
                     </div>
                   </div>
                 </div>
