--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -63,10 +63,24 @@
 <!--div class="flex flex-col">
   <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"-->
   <div class="container px-4 bg-white">
-    <div class="py-4 flex items-center">
-      <!--%= text_field_tag :search, params[:search], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-1/4 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Search for..." %-->
-      <!--%= submit_tag "Search", class: "btn inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ml-3" %-->
-      <input type="text" id="myInput" onkeyup="myFunction(2)" placeholder="Search product name" title="Type in a name" class="focus:ring-indigo-500 focus:border-indigo-500 block w-1/4 shadow-sm sm:text-sm border-gray-300 rounded-md">
+    <div class="items-center block w-full mt-2 text-center lg:flex lg:flex-row lg:flex-1 lg:mt-0 lg:text-left justify-between">
+      <!--input type="text" id="myInput" onkeyup="myFunction(3)" placeholder="Search product name" title="Type in a name" class="focus:ring-indigo-500 focus:border-indigo-500 block w-1/4 shadow-sm sm:text-sm border-gray-300 rounded-md"-->
+      <%= render 'shared/searchform' %>
+
+      <% if user_signed_in? && current_user.admin? %>
+        <a href="<%= new_product_path(@product) %>">
+          <span class="hidden sm:block">
+            <button type="button" class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <!-- Heroicon name: solid/pencil -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            New Product
+            </button>  
+          </span>
+        </a>
+        <%#= link_to 'New Product', new_product_path, class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+      <% end %>
     </div>
     <div class="align-middle inline-block min-w-full ">
       <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
@@ -159,12 +173,19 @@
             <div>
               <p class="text-sm text-gray-700">
                 Showing
-                <span class="font-medium">1</span>
-                to
-                <span class="font-medium">15</span>
-                of
-                <span class="font-medium"> <%= @products.total_count %> </span>
-                results
+                <% if @products.length == 0 %>
+                  <span class="font-medium"><%= @products.offset_value %></span>
+                  of
+                  <span class="font-medium"> <%= @products.total_count %> </span>
+                  results
+                <% else %>
+                  <span class="font-medium"><%= @products.offset_value + 1 %></span>
+                  to
+                  <span class="font-medium"><%= @products.offset_value + @products.length %></span>
+                  of
+                  <span class="font-medium"> <%= @products.total_count %> </span>
+                  results
+                <% end %>  
               </p>
             </div>
 
