--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -73,7 +73,7 @@
                     <span>My profile</span>
                 </a>
             </li>
-            <li>
+            <!--li>
                 <a href="<%= products_path %>" class="flex items-center space-x-3 text-gray-700 p-2 rounded-md font-medium hover:bg-gray-200 focus:bg-gray-200 focus:shadow-outline bg-gray-200">
                     <span class="text-gray-600">
                         <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -81,6 +81,16 @@
                         </svg>
                     </span>
                     <span>Products</span>
+                </a>
+            </li-->
+            <li>
+                <a href="<%= papuas_path %>" class="flex items-center space-x-3 text-gray-700 p-2 rounded-md font-medium hover:bg-gray-200 focus:bg-gray-200 focus:shadow-outline bg-gray-200">
+                    <span class="text-gray-600">
+                        <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
+                        </svg>
+                    </span>
+                    <span>Languages</span>
                 </a>
             </li>
             <!--li>
