fix text search and add charts

--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,8 +1,10 @@
  <head>
-  <title>
-    <% if content_for?(:title) %>
-      <%= yield :title %> |
-    <% end %>
-    OMC Product Management
-  </title>
+  	<script src='https://api.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v2.4.0/mapbox-gl.css' rel='stylesheet' />	
+ 	<title>
+      <% if content_for?(:title) %>
+      	<%= yield :title %> |
+      <% end %>
+      OMC Product Management
+    </title>
 </head>
