--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
+
 
 
   <header class="w-full fixed">
@@ -19,16 +21,18 @@
   </header>
 
   <!-- dashboard design -->
+  <!--body class="flex flex-wrap bg-gray-50 w-full h-screen"-->
   <body class="flex flex-wrap bg-gray-50 w-full h-screen">
 
     <!-- only if logined in, show header -->
-    <div class="w-64 bg-white rounded p-3 shadow-lg fixed top-0 bottom-0 mt-16">
+    <!--div class="w-64 bg-white rounded p-3 shadow-lg fixed top-0 bottom-0 mt-16">
       
-      <%= render "shared/header" %>
-    </div>
+      <%#= render "shared/header" %>
+    </div-->
 
-    <main class="ml-72 flex-1 mt-16 p-4">
-      <%#= render "shared/flash_notice" %>
+    <!--main class="ml-72 flex-1 mt-16 p-4"-->
+    <main class="flex-1 mt-16 p-4">
+      <%= render "shared/flash_notice" %>
       <%= content_for?(:content) ? yield(:content) : yield %>
     </main>
   </body>
