--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -2,13 +2,25 @@
 
 <h1 class="py-2 text-3xl text-gary-900 font-bold">Papunesias</h1>
 
-<div class="container px-4 bg-white">
+
+
+<div class="px-4 bg-white min-w-full ">
   <div class="items-center block w-full mt-2 text-center lg:flex lg:flex-row lg:flex-1 lg:mt-0 lg:text-left justify-between">
     <!--input type="text" id="myInput" onkeyup="myFunction(7)" placeholder="Search Inventory" title="Type in inventories" class="focus:ring-indigo-500 focus:border-indigo-500 block w-1/4 shadow-sm sm:text-sm border-gray-300 rounded-md"-->
 
+    <div class="text-lg font-medium text-gray-900">
+      <p>
+        Results: <%= @papuas_results.length %>
+      </p>
+      <P>
+        Total: <%= @papuas_all.length %>
+      </p>
+    </div>
+
     <%= form_tag(papuas_path, method: "get") do %>
     <div class="py-4 flex items-center">
-      <%= text_field_tag :search, params[:search], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Search for inventories and ..." %>
+      <%= text_field_tag :search_inc, params[:search_inc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Search inventories" %>
+      <%= text_field_tag :search_exc, params[:search_exc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md ml-3", placeholder: "Exclude inventories" %>
       <%= submit_tag "Search!", class: "ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
 
 
@@ -19,21 +31,75 @@
 
     <% end %>
 
-    <% if user_signed_in? && current_user.admin? %>
-    <a href="<%= new_product_path(@product) %>">
+    <%# if user_signed_in? && current_user.admin? %>
+    <!--a href="<%= new_papua_path(@papua) %>">
       <span class="hidden sm:block">
         <button type="button" class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-          <!-- Heroicon name: solid/pencil -->
           <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
           </svg>
           New Language
         </button>  
       </span>
-    </a>
+    </a-->
     <%#= link_to 'New Product', new_product_path, class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
-    <% end %>
+    <%# end %>
   </div>
+
+  <div class="py-3">
+
+    <%= pie_chart [["Results", @papuas_results.length], ["Others", @papuas_all.length - @papuas_results.length]], label: @papuas_results.length, download: true %>
+
+    <%= bar_chart [["Average of Segments",@avg_s, @avg_s], ["Average of Consonants", @avg_c, @avg_c], ["Average of Vowels", @avg_v, @avg_v]], download: true %>
+
+  </div>
+
+  <!--div id='map' style='width: 100%; height: 500px;'></div>
+  <script>
+    mapboxgl.accessToken = 'pk.eyJ1Ijoic2lsZW5jZWp0IiwiYSI6ImNrc2EwN3ZwNjB6NTcydXFxZ2N2bmRwNHcifQ.uxkpkzBwxIFOgqzEN_7bqA';
+    const map = new mapboxgl.Map({
+        container: 'map', // container ID
+        style: 'mapbox://styles/mapbox/streets-v11', // style URL
+        center: [141.65793, -4.20192], // starting position [lng, lat]
+        zoom: 2 // starting zoom
+    });
+
+    
+    var lng = new Array();
+    var lat = new Array();
+
+    
+
+    var lng_test = [141.65793, 136.13974];
+    var lat_test = [-4.20192, -3.19328];
+
+    /*
+    const m1 = new mapboxgl.Marker()
+                    .setLngLat([lng_test[0], lat_test[0]])
+                    .addTo(map);
+
+    const m2 = new mapboxgl.Marker()
+                    .setLngLat([lng_test[1], lat_test[1]])
+                    .addTo(map);
+
+    const m3 = new mapboxgl.Marker()
+                    .setLngLat([137.6289, -2.44717])
+                    .addTo(map);
+    */
+
+    
+    for (let i = 0; i < lng_test.length; i++) {
+      var no = i.toString();
+      const marker = "m" + no;
+      marker = new mapboxgl.Marker()
+                    .setLngLat([lng_test[i], lat_test[i]])
+                    .addTo(map);
+    };
+    
+
+    
+  </script-->
+
   <div class="align-middle inline-block min-w-full ">
     <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
       <table id="myTable" class="min-w-full divide-y divide-gray-200">
@@ -87,7 +153,7 @@
                     </div-->
                     <!--div class="ml-4"-->
                     <div class="text-sm font-medium text-gray-900">
-                      <%= papua.language %>
+                      <%= papua.language_name %>
                     </div>
                       <!--div class="text-sm text-gray-500">
                         jane.cooper@example.com
@@ -154,7 +220,7 @@
       </div>
     </div>
 
-<script>
+<!--script>
 function myFunction(n) {
   var input, filter, table, tr, td, i, txtValue;
   input = document.getElementById("myInput");
@@ -183,4 +249,4 @@ function myFunction(n) {
     }       
   }
 }
-</script>
+</script-->
