--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -8,28 +8,9 @@
   <div class="items-center block w-full mt-2 text-center lg:flex lg:flex-row lg:flex-1 lg:mt-0 lg:text-left justify-between">
     <!--input type="text" id="myInput" onkeyup="myFunction(7)" placeholder="Search Inventory" title="Type in inventories" class="focus:ring-indigo-500 focus:border-indigo-500 block w-1/4 shadow-sm sm:text-sm border-gray-300 rounded-md"-->
 
-    <div class="text-lg font-medium text-gray-900">
-      <p>
-        Results: <%= @papuas_results.length %>
-      </p>
-      <P>
-        Total: <%= @papuas_all.length %>
-      </p>
-    </div>
+    
 
-    <%= form_tag(papuas_path, method: "get") do %>
-    <div class="py-4 flex items-center">
-      <%= text_field_tag :search_inc, params[:search_inc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Search inventories" %>
-      <%= text_field_tag :search_exc, params[:search_exc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md ml-3", placeholder: "Exclude inventories" %>
-      <%= submit_tag "Search!", class: "ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
-
-
-      <%= link_to "Download: Excel", 
-        papuas_path({:format => "xls"}),
-        download: 'Papunesias.xls', class: "ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" %>
-    </div>
-
-    <% end %>
+    <%= render 'shared/searchbar' %>
 
     <%# if user_signed_in? && current_user.admin? %>
     <!--a href="<%= new_papua_path(@papua) %>">
@@ -47,6 +28,15 @@
   </div>
 
   <div class="py-3">
+
+    <div class="text-lg font-medium text-gray-900">
+      <p>
+        Results: <%= @papuas_results.length %>
+      </p>
+      <P>
+        Total: <%= @papuas_all.length %>
+      </p>
+    </div>
 
     <%= pie_chart [["Results", @papuas_results.length], ["Others", @papuas_all.length - @papuas_results.length]], colors: ["#4264fb", "#fb4264"], label: @papuas_results.length, download: true %>
 
@@ -188,125 +178,40 @@
     
   </script>
 
-  <div class="align-middle inline-block min-w-full ">
+  <div class="align-middle inline-block min-w-full " id="papuas_table">
     <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-      <table id="myTable" class="min-w-full divide-y divide-gray-200">
-        <thead class="bg-gray-50">
-          <tr>
-            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              No
-            </th>
+      
+      <%= render 'papuas' %>
 
-            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Language
-              <!--input type="text" id="myInput" onkeyup="myFunction(1)" title="Type in a name" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md"-->
-            </th>
-
-            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Language Family
-            </th>
-
-            <th scope="col" class="px-2 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              ISO
-            </th>
-
-            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Country
-            </th>
-
-            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Latitude
-            </th>
-
-            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              longitude
-            </th>
-
-            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Inventory
-            </th>
-          </tr>
-        </thead>
-        <tbody class="bg-white divide-y divide-gray-200">
-          <% @papuas.each do |papua| %>
-          <tr onclick="window.location.href='/papuas/<%= papua.id.to_s %>'" style="cursor:pointer">
-            <td class="px-4 py-4 whitespace-nowrap">
-              <div class="text-sm text-gray-900"><%= papua.no %></div>
-            </td>
-
-            <td class="px-4 py-4 whitespace-nowrap">
-              <div class="flex items-center">
-                    <!--div class="flex-shrink-0 h-10 w-10">
-                      <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
-                    </div-->
-                    <!--div class="ml-4"-->
-                    <div class="text-sm font-medium text-gray-900">
-                      <%= papua.language_name %>
-                    </div>
-                      <!--div class="text-sm text-gray-500">
-                        jane.cooper@example.com
-                      </div-->
-                      <!--/div-->
-                    </div>
-                  </td>
-                  <td class="px-4 py-4 whitespace-nowrap">
-                    <div class="text-sm text-gray-500"><%= papua.language_family %></div>
-                    <!--div class="text-sm text-gray-500">Optimization</div-->
-                  </td>
-                  <td class="px-2 py-4 whitespace-nowrap">
-                    <div class="text-sm text-gray-500"><%= papua.iso %></div>
-                  </td>
-                  <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
-                    <%= papua.country %>
-                  </td>
-                  <td class="px-4 py-4 whitespace-nowrap text-sm text-gray-500">
-                    <%= papua.latitude %>
-                  </td>
-                  <td class="px-6 py-3 text-sm text-gray-500 ">
-                    <%= papua.longitude %>
-                  </td>
-                  <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
-                    <%= papua.inv %>
-                  </td>
-                <!--td class="px-2 py-4 whitespace-nowrap text-right text-sm font-medium">
-                  <%#= link_to 'Edit', edit_product_path(product), class: "text-indigo-600 hover:text-indigo-900" %>
-                </td-->
-              </tr>
-              <% end %>
-              <!-- More items... -->
-            </tbody>
-          </table>
-
-
-          <div class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
-            <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
-              <div>
-                <p class="text-sm text-gray-700">
-                  Showing
-                  <% if @papuas.length == 0 %>
-                  <span class="font-medium"><%= @papuas.offset_value %></span>
-                  of
-                  <span class="font-medium"> <%= @papuas.total_count %> </span>
-                  results
-                  <% else %>
-                  <span class="font-medium"><%= @papuas.offset_value + 1 %></span>
-                  to
-                  <span class="font-medium"><%= @papuas.offset_value + @papuas.length %></span>
-                  of
-                  <span class="font-medium"> <%= @papuas.total_count %> </span>
-                  results
-                  <% end %>  
-                </p>
-              </div>
-
-              <div>
-                <%= paginate @papuas %>
-              </div>
-            </div>
-          </div>
+      <div class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
+        <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
+         <div>
+          <p class="text-sm text-gray-700">
+            Showing
+            <% if @papuas.length == 0 %>
+              <span class="font-medium"><%= @papuas.offset_value %></span>
+              of
+              <span class="font-medium"> <%= @papuas.total_count %> </span>
+              results
+              <% else %>
+              <span class="font-medium"><%= @papuas.offset_value + 1 %></span>
+              to
+              <span class="font-medium"><%= @papuas.offset_value + @papuas.length %></span>
+              of
+              <span class="font-medium"> <%= @papuas.total_count %> </span>
+              results
+            <% end %>  
+          </p>
         </div>
+
+        <div id="paginator">
+          <%= paginate @papuas %>
+        </div>
+
+       </div>
       </div>
     </div>
+  </div>
 
 <!--script>
 function myFunction(n) {
