--- a/app/views/papuas/_papuas.html.erb
+++ b/app/views/papuas/_papuas.html.erb
@@ -1,4 +1,7 @@
-<table id="myTable" class="min-w-full divide-y divide-gray-200">
+<div class="align-middle inline-block min-w-full " id="papuas_table">
+    <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+      
+    <table id="myTable" class="min-w-full divide-y divide-gray-200">
 	<thead class="bg-gray-50">
         <tr>
             <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -84,3 +87,7 @@
     <!-- More items... -->
   	</tbody>
 </table>
+
+      
+    </div>
+</div>
