--- a/app/views/papuas/_papuas.html.erb
+++ b/app/views/papuas/_papuas.html.erb
@@ -1,8 +1,8 @@
 <div class="align-middle inline-block min-w-full " id="papuas_table">
-    <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+  <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
       
     <table id="myTable" class="min-w-full divide-y divide-gray-200">
-	<thead class="bg-gray-50">
+	  <thead class="bg-gray-50">
         <tr>
             <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               No
@@ -25,16 +25,28 @@
               Country
             </th>
 
-            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <!--th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               Latitude
             </th>
 
             <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               longitude
-            </th>
+            </th-->
 
             <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               Inventory
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              C
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              V
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Total
             </th>
         </tr>
     </thead>
@@ -70,14 +82,23 @@
         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
           <%= papua.country %>
         </td>
-        <td class="px-4 py-4 whitespace-nowrap text-sm text-gray-500">
+        <!--td class="px-4 py-4 whitespace-nowrap text-sm text-gray-500">
           <%= papua.latitude %>
         </td>
         <td class="px-6 py-3 text-sm text-gray-500 ">
           <%= papua.longitude %>
-        </td>
+        </td-->
         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
           <%= papua.inv %>
+        </td>
+        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
+          <%= papua.count_of_consonants %>
+        </td>
+        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
+          <%= papua.count_of_vowels %>
+        </td>
+        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
+          <%= papua.count_of_segments %>
         </td>
       	<!--td class="px-2 py-4 whitespace-nowrap text-right text-sm font-medium">
         	<%#= link_to 'Edit', edit_product_path(product), class: "text-indigo-600 hover:text-indigo-900" %>
