--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -6,6 +6,6 @@
       <% if content_for?(:title) %>
       	<%= yield :title %> |
       <% end %>
-      OMC Product Management
+      Papunesias
     </title>
 </head>
