add page entries info

--- a/app/views/papuas/index.js.erb
+++ b/app/views/papuas/index.js.erb
@@ -1,5 +1,6 @@
 //$("#papuas_search").html("<%= escape_javascript(render("papuas")) %>");
 $("#papuas_table tbody").html("<%= escape_javascript(render("papuas")) %>");
+$("#page_entries_info").html("<%= escape_javascript(render("page_entries_info")) %>");
 
 //works fine but slow
 $("#paginator").html("<%= escape_javascript(paginate(@papuas, :remote => true).to_s) %>");
