--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -161,15 +161,14 @@
       <%= render 'papuas' %>
     </tbody>
     
-</table>
-
-      
-    </div>
+  </table>
+  </div>
 </div>
-  <!--div id="papuas_table" class="py-5"><%#= render 'papuas' %></div-->  
+ 
 
-  <div id="paginator" class="bg-white py-3 flex items-center justify-end border-t border-gray-200">
-    <%= paginate @papuas, remote: true %>
+  <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
+    <div id="page_entries_info"><%= render 'page_entries_info' %></div>
+    <div id="paginator"><%= paginate @papuas, remote: true %></div>
   </div>  
    
 
